# xpod_vvla

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.cargo/: config.toml
proto/: rts.proto
src/: ble_api.rs  llm.rs  main.rs  stt.rs  vla.rs
web_ui/: index.html
web_ui/scripts/: app.js  libsodium-wrappers.js  main.js
web_ui/scripts/bots/: vector.js
web_ui/scripts/quotes/: quotes.js  quotes.json
web_ui/style/: main.css
xpod-core/: Cargo.toml  prompts.json
xpod-core/src/: jwt_auth.rs  llm.rs  main.rs  stt.rs  vla.rs
xpod-core/web_ui/: index.html
xpod-core/web_ui/scripts/: app.js
xpod-core/web_ui/scripts/bots/: vector.js  virtual.js
xpod-core/web_ui/scripts/quotes/: quotes.json
xpod-core/web_ui/style/: main.css
xpod-vector/: Cargo.toml  build.rs
xpod-vector/proto/google/api/: annotations.proto  http.proto
xpod-vector/src/: ble_api.rs  cloud_auth_orchestrator.rs  main.rs
