[package]
name = "xpod"
version = "0.0.1-a"
edition = "2024"
authors = ["wardog <wardog.x82@gmail.com>"]
description = "Vector Visual-Language-Action Server"

[dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync"] }
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
rustls-pemfile = "2.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
dotenvy = "0.15"

# Networking and Serialisation stack
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AI Stack
candle-core = "0.3.1"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
tokenizers = "0.15.0"
image = "0.24.7"
hf-hub = "0.3.2"

[build-dependencies]
tonic-build = "0.10"