[workspace]
members = [
    "xpod-core",
    "xpod-vector"
]
resolver = "2"

[workspace.package]
version = "0.0.1-a"
edition = "2024"
authors = ["wardog <wardog.x82@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "signal", "process"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
dotenvy = "0.15"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1