[package]
name = "xpod"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
dotenvy.workspace = true

tonic = { version = "0.10", default-features = false, features = ["prost", "codegen"] }
prost = "0.12"

rcgen = "0.12"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
tower-http = { version = "0.5", features = ["fs"] }
http-body-util = "0.1"

candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
tokenizers = "0.19.1"
image = "0.24.7"
hf-hub = { version = "0.4.1", default-features = false, features = ["rustls-tls"] }