[package]
name = "xpod-vector"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
tonic = { version = "0.10", default-features = false, features = ["prost", "codegen", "tls", "tls-webpki-roots"] }
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
rustls-pemfile = "2.0"
blake2b_simd = "1.0"
hex = "0.4"
ssh2.workspace = true
tracing = "0.1"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"
protobuf-src = "1.1"